aa-status: add output for for stacked processes in mixed mode
Processes that are confined by multiple profiles in a stack can have
more than one profile mode applied. Allow aa-status to report
processes that are in a mixed profile confinement mode.

Signed-off-by: John Johansen <john.johansen@canonical.com>
Acked-by: Steve Beattie <steve.beattie@canonical.com>

--- a/binutils/aa-status.pod
+++ b/binutils/aa-status.pod
@@ -70,6 +70,11 @@ displays the number of loaded enforcing AppArmor policies.
 
 displays the number of loaded non-enforcing AppArmor policies.
 
+=item --process-mixed
+
+displays the number of processes confined by profile stacks with
+profiles in different modes.
+
 =item --verbose
 
 displays multiple data points about loaded AppArmor policy
