aa-status: add support for kill and unconfined profile modes
AppArmor 3 exposes kernel support for the kill and unconfined profile
modes. Make sure aa-status has basic support for these modes.

Signed-off-by: John Johansen <john.johansen@canonical.com>
Acked-by: Steve Beattie <steve.beattie@canonical.com>

--- a/binutils/aa-status.pod
+++ b/binutils/aa-status.pod
@@ -70,8 +70,15 @@ displays the number of loaded enforcing AppArmor policies.
 
 displays the number of loaded non-enforcing AppArmor policies.
 
-=item --process-mixed
+=item --kill
 
+displays the number of loaded enforcing AppArmor policies that will kill tasks on policy violations.
+
+=item --special-unconfined
+
+displays the number of loaded non-enforcing AppArmor policies that are in the special unconfined mode.
+
+=item --process-mixed
 displays the number of processes confined by profile stacks with
 profiles in different modes.
 
