libapparmor: make libapparmor LSM stacking aware
With LSM stacking apparmor may be available even if it is not
enabled. If apparmor is available but not enabled it does not own
the /proc/<pid>/attr/* interface and should not use it as they
will not provide apparmor context.

Note: this also applies to the SO_PEERSEC interface, currently we
only fail is apparmor does not own the interface. Once the new interface
command is finalized supprt to use that will be added.

Signed-off-by: John Johansen <john.johansen@canonical.com>
Acked-by: Steve Beattie <steve.beattie@canonical.com>

--- a/libraries/libapparmor/doc/aa_find_mountpoint.pod
+++ b/libraries/libapparmor/doc/aa_find_mountpoint.pod
@@ -87,6 +87,11 @@ Did not have sufficient permissions to determine if AppArmor is enabled.
 
 Did not have sufficient permissions to determine if AppArmor is enabled.
 
+=item B<EBUSY>
+
+AppArmor is enabled but does not have access to shared interfaces, and
+only private interfaces are available.
+
 =back
 
 B<aa_find_mountpoint>
