--- a/libraries/libapparmor/doc/aa_stack_profile.pod
+++ b/libraries/libapparmor/doc/aa_stack_profile.pod
@@ -208,7 +208,7 @@ The output when run:
 =head1 BUGS
 
 None known. If you find any, please report them at
-L<https://bugs.launchpad.net/apparmor/+filebug>. Note that using
+L<https://gitlab.com/apparmor/apparmor/-/issues>. Note that using
 aa_stack_profile(2) without execve(2) provides no memory barriers between
 different areas of a program; if address space separation is required, then
 separate processes should be used.
