--- a/utils/aa-notify.pod
+++ b/utils/aa-notify.pod
@@ -109,8 +109,8 @@ the deprecated ~/.apparmor/notify.conf if it exists):
 B<aa-notify> needs to be able to read the logfiles containing the
 AppArmor DENIED messages.
 
-If you find any additional bugs, please report them to Launchpad at
-L<https://bugs.launchpad.net/apparmor/+filebug>.
+If you find any additional bugs, please report them to Gitlab at
+L<https://gitlab.com/apparmor/apparmor/-/issues>.
 
 =head1 SEE ALSO
 
