--- a/parser/apparmor.d.pod
+++ b/parser/apparmor.d.pod
@@ -1727,6 +1727,17 @@ If the policy abi is specified as B<kernel> then the running kernel's
 abi will be used. This should never be used in shipped policy as it
 can cause system breakage when a new kernel is installed.
 
+=head3 ABI compatability with AppArmor 2.x
+
+AppArmor 3 remains compatible with AppArmor 2.x by detecting when a
+profile does not have a feature ABI specified. In this case the policy
+compile will either apply the pinned feature ABI as specified by the
+config file or the command line, or if neither of those are applied by
+using a default feature ABI.
+
+It is important to note that the default feature ABI does not support
+new features added in AppArmor 3 or later.
+
 =head1 EXAMPLE
 
 An example AppArmor profile:
