parser: add an option to allow overriding feature ABI rules
Add an option to allow setting/pinning the feature ABI and overriding
of ABI rules if they exist.

  --override-policy-abi

This option is primarily for profile development and testing without
allowing adjusting feature abis temporarily without modifying the
profile.

MR: https://gitlab.com/apparmor/apparmor/-/merge_requests/579
Signed-off-by: John Johansen <john.johansen@canonical.com>

--- a/parser/apparmor_parser.pod
+++ b/parser/apparmor_parser.pod
@@ -186,7 +186,13 @@ Set the location of the apparmor security filesystem (default is
 
 =item --policy-features n
 
-Specify the feature set that the policy was developed under.
+Specify the feature set that the policy was developed under. This does
+not override feature ABI rules.
+
+=item --override-policy-abi n
+
+Specify the feature set that the policy was developed under and
+override any feature ABI rules that the policy may be using.
 
 =item --kernel-features n
 
