parser: allow specifying --warn=no-XXX to turn off warnings
Some warning flags are enabled by default, allow a warning to
be disbaled by specifying no- infront of the warning.

  Eg.
    --warn=no-deprecated

MR: https://gitlab.com/apparmor/apparmor/-/merge_requests/600
Signed-off-by: John Johansen <john.johansen@canonical.com>

--- a/parser/apparmor_parser.pod
+++ b/parser/apparmor_parser.pod
@@ -301,6 +301,10 @@ multiple times.
 
   apparmor_parser --warn=rules-not-enforced ...
 
+A specific warning can be disabled by prepending I<no>- to the flag
+
+  apparmor_parser --warn=no-rules-not-enforced ...
+
 Use --help=warn to see a full list of which warn flags are supported.
 
 =item --Werror[=n]
