--- a/tst/README
+++ b/tst/README
@@ -10,7 +10,7 @@ against a different parser, or use a different set of profiles for the
 simple.pl test, you can change those settings in 'uservars.conf'.
 
 You can also override which parser is used through make by specifying
-the PARSER veriable. For example, to run the tests on the system parser,
+the PARSER variable. For example, to run the tests on the system parser,
 run 'make PARSER=/sbin/apparmor_parser'.
 
 Adding to the testsuite
@@ -61,7 +61,7 @@ The simple script looks for a few special comments in the profile,
     expected parse result of PASS.
 
   - #=TODO -- marks the test as being for a future item to implement and
-    thus are expected testsuite failures and hsould be ignored.
+    thus are expected testsuite failures and should be ignored.
 
   - #=DISABLED -- skips the test, and marks it as a failed TODO task.
     Useful if the particular testcase causes the parser to infinite
