--- a/binutils/po/aa_enabled.pot
+++ b/binutils/po/aa_enabled.pot
@@ -22,7 +22,7 @@ msgstr ""
 msgid ""
 "%s: [options]\n"
 "  options:\n"
-"  -x | --exclusive    Shared interfaces must be availabe\n"
+"  -x | --exclusive    Shared interfaces must be available\n"
 "  -q | --quiet        Don't print out any messages\n"
 "  -h | --help         Print help\n"
 msgstr ""
